--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       # - DB_USER: root
       # - DB_PASSWORD: 123456
       # - DB_NAME: nodejs
-      - MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_ROOT_PASSWORD: 123456
     ports:
       - "3308:3306"
     volumes:
