--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,42 @@
-version: "3.7"
+version: "3"
 
 services:
-  mysql:
-    platform: linux/x86_64
-    image: mysql:5.7
-    container_name: mysql-nodejs
-    restart: unless-stopped
+  db:
+    image: mysql:latest
+    container_name: db
     environment:
-      # - DB_HOST: mysql
-      # - DB_USER: root
-      # - DB_PASSWORD: 123456
-      # - DB_NAME: nodejs
-      MYSQL_ROOT_PASSWORD: 123456
+      MYSQL_ROOT_PASSWORD: training-2023
+      MYSQL_DATABASE: users
+      MYSQL_USER: training
+      MYSQL_PASSWORD: training_pw
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "50m"
+    restart: unless-stopped
     ports:
       - "3306:3306"
-    volumes:
-      # Mysql
-      - db:/var/lib/mysql
     networks:
-      - nodejss
+      - app-network
 
-  web:
+  app:
+    image: thaihmcsp/build_server:{tag}
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: app
     depends_on:
-      - mysql
-    build: ./
+      - db
     ports:
-      - "3006:3006"
-    volumes:
-      - ./:/app
-    restart: unless-stopped
-    container_name: nodejs
-    stdin_open: true
-    tty: true
+      - "3000:3000"
+    environment:
+      DB_HOST: db
+      DB_USER: training
+      DB_PASSWORD: training_pw
+      DB_DATABASE: users
     networks:
-      - nodejss
-
-volumes:
-  db:
+      - app-network
 
 networks:
-  nodejss:
+  app-network:
     external: true
